--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  provider:
+  google_sign_in:
+  flutter_auth_buttons:
+  cached_network_image:
+  shared_preferences:
+  font_awesome_flutter:
+  url_launcher:
 
 dev_dependencies:
   flutter_test:
