simple test for get my location

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   url_launcher:
   dio:
   image_picker:
-  location:
+  geolocator:
+  google_maps_flutter:
 
 dev_dependencies:
   flutter_test:
