--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,15 @@ dependencies {
     def kodein_version = "6.4.0"
     implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
     implementation "org.kodein.di:kodein-di-framework-android-x:$kodein_version"
+
+    //font awesome
+    implementation 'info.androidhive:fontawesome:0.0.5'
+
+    //Circular Image view
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+
+    // glide
+    def glide_version = "4.10.0"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 }
