--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     implementation "com.google.code.gson:gson:$gson_version"
 
     // Kotlin Android Coroutines
-    def coroutine_version = "1.3.2"
+    def coroutine_version = "1.3.0-M1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
