--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,8 @@ dependencies {
     // New Material Design
     def android_material_version = "1.1.0-beta01"
     implementation "com.google.android.material:material:$android_material_version"
+
+    //google sign in
+    def google_auth_version = "17.0.0"
+    implementation "com.google.android.gms:play-services-auth:$google_auth_version"
 }
