--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,7 +114,7 @@ dependencies {
     implementation "androidx.preference:preference:$preference_version"
 
     // New Material Design
-    def android_material_version = "1.1.0-beta01"
+    def android_material_version = "1.0.0"
     implementation "com.google.android.material:material:$android_material_version"
 
     //google sign in
