--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ properties.load(project.rootProject.file('local.properties').newDataInputStream(
 def googleMapApiKey = properties.getProperty('google.map.key')
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.treflor"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -49,7 +49,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
 
     // lifecycle
     def lifecycle_version = '2.1.0'
@@ -108,19 +107,17 @@ dependencies {
     def threetenbp_version = "1.2.1"
     implementation "com.jakewharton.threetenabp:threetenabp:$threetenbp_version"
 
-
     // Preference
     def preference_version = "1.1.0"
     implementation "androidx.preference:preference:$preference_version"
 
     // New Material Design
-    def android_material_version = "1.0.0"
+    def android_material_version = "1.2.0-alpha01"
     implementation "com.google.android.material:material:$android_material_version"
 
     //google sign in
     def google_auth_version = "17.0.0"
     implementation "com.google.android.gms:play-services-auth:$google_auth_version"
-
 }
 
 apply plugin: 'com.google.gms.google-services'
