--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ apply plugin: "kotlin-kapt"
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 def googleMapApiKey = properties.getProperty('google.map.key')
+def googleClientId = properties.getProperty('google.client-id')
 
 android {
     compileSdkVersion 29
@@ -20,6 +21,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resValue "string", "googleMapApiKey", googleMapApiKey
+        resValue "string", "googleClientId", googleClientId
     }
     buildTypes {
         release {
